--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8081
 
+spring.data.mongodb.host=localhost:27017
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=SmartQueueDB
